--- a/client/src/components/Main/main.css
+++ b/client/src/components/Main/main.css
@@ -3,13 +3,13 @@
 }
 
 .LogoHeader {
-  font-family: "Yeseva One", cursive;
+  font-family: 'Chivo', sans-serif;
   font-size: 50px;
   color: rgb(95, 190, 190);
 }
 
 .LogoFooter {
-  font-family: "Yeseva One", cursive;
+  font-family: 'Chivo', sans-serif;
   font-size: 30px;
 }
 
