--- a/client/src/components/Main/main.css
+++ b/client/src/components/Main/main.css
@@ -6,11 +6,13 @@
   font-family: 'Chivo', sans-serif;
   font-size: 50px;
   color: rgb(95, 190, 190);
+  font-weight: bolder;
 }
 
 .LogoFooter {
   font-family: 'Chivo', sans-serif;
   font-size: 30px;
+  font-weight: bolder;
 }
 
 .FotoUno {
