--- a/client/src/components/Main/main.css
+++ b/client/src/components/Main/main.css
@@ -52,3 +52,29 @@
     #ffeeee
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+@media screen and (max-width:640px) {
+  .TextoHome {
+    font-family: "Oswald", sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+  }
+
+  .FotoUno {
+    font-size: 10px;
+    height: 60px;
+    width: 200px;
+  }
+
+  .FotoDos {
+    font-size: 10px;
+    height: 60px;
+    width: 200px;
+  }
+
+  .btn {
+    font-size: 10px;
+    width: 70%;
+    height: 80%
+  }
+}
