--- a/client/src/components/Usuario/BuscarProfesionales/card_profesional.css
+++ b/client/src/components/Usuario/BuscarProfesionales/card_profesional.css
@@ -30,6 +30,7 @@
     height: 100%;
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
+    max-height: 300px
 }
 
 .ProfesionalBox .Content {
