--- a/client/src/components/Usuario/BuscarProfesionales/card_profesional.css
+++ b/client/src/components/Usuario/BuscarProfesionales/card_profesional.css
@@ -1,56 +1,21 @@
 .ProfesionalBox {
-    width: 80%;
-    border: 1px solid #64AFFF;
-    border-radius: 10px;
     margin: 0 auto;
-    max-height: 420px;
-    overflow: scroll;
-    overflow-x: hidden;
-    overflow-y: hidden;
 }
 
 .ProfesionalBox:hover {
     -webkit-transition: all 0.1s ease-in;
     transition: all 0.1s ease-in;
-    width: 100%;
     cursor: pointer; 
-    max-height: none;
-}
-
-.ProfesionalBox i {
-    color: transparent
-}
-
-.ProfesionalBox:hover i {
-    color: #000000
-}
-
-.ProfesionalBox .Image {
-    width: 100%;
-    height: 100%;
-    border-top-right-radius: 8px;
-    border-top-left-radius: 8px;
-    max-height: 300px
+    border: 2px solid lightblue;
+    border-radius: 5px;
 }
 
 .ProfesionalBox .Content {
-    margin: 10px;
-    height: 250px;
+    height: 0px;
+    color: transparent;
 }
 
-.ProfesionalBox .Footer {
-    margin: 8px;
+.ProfesionalBox:hover .Content {
     height: auto;
-    text-align: center;
-}
-
-@media screen and (max-width:640px) {
-    .ProfesionalBox {
-        width: 80%;
-        max-height: none;
-    }
-
-    .ProfesionalBox i {
-        color: #000000;
-    }
+    color: #000000;
 }
